feat: persist results and fence runner release