@@ -7,6 +7,7 @@ import java.time.OffsetDateTime;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.jdbc.core.RowMapper;
 import org.springframework.stereotype.Service;
@@ -14,52 +15,23 @@ import org.springframework.transaction.annotation.Isolation;
 import org.springframework.transaction.annotation.Transactional;
 
 /**
- * Exclusively claims a compatible schedulable runner for queued work with PostgreSQL as the sole
- * authority for ownership (issue #5).
+ * Exclusive runner claims with PostgreSQL as the sole ownership authority. Transactions lock
+ * runner, then job, before checking cancellation/result and inserting an attempt/allocation.
+ * This serializes against reports and cancellation without a job/runner lock-order cycle.
+ * Only AVAILABLE is schedulable; absence of an allocation is not safe-reuse proof.
  *
- * <p>Transaction boundary: each {@link #claim} call runs in a single database transaction at
- * {@code READ_COMMITTED} isolation (declared explicitly). The correctness-sensitive path is
- * explicit SQL via {@code JdbcTemplate}, not opaque ORM:
- *
- * <pre>
- * -- 1. load the immutable job row for its runnerClass
- * SELECT runner_class FROM jobs WHERE job_id = ?;
- * -- 2. atomic compare-and-swap: only an AVAILABLE runner whose class exactly
- * --    equals the job's class is claimed; the row lock serializes contenders
- * UPDATE runners
- *    SET state = 'ASSIGNED', epoch = epoch + 1, updated_at = now()
- *  WHERE runner_id = ? AND state = 'AVAILABLE' AND runner_class = ?
- *  RETURNING runner_id, epoch;
- * -- 3. durable execution-attempt identity for this claim
- * INSERT INTO attempts (attempt_id, job_id) VALUES (?, ?);
- * -- 4. authoritative ownership binding (partial-unique backstop)
- * INSERT INTO allocations (allocation_id, attempt_id, job_id, runner_id, runner_epoch)
- * VALUES (?, ?, ?, ?, ?);
- * </pre>
- *
- * <p>Concurrency semantics (observed PostgreSQL behavior, READ COMMITTED): a concurrent claimant
- * for the same runner blocks on the row lock taken by step 2 until the winner commits or rolls
- * back, then re-evaluates the {@code WHERE} predicate against the newest committed row version.
- * After a committed win the runner is {@code ASSIGNED}, so the loser matches no row and observes
- * no allocation. After a rollback the runner is {@code AVAILABLE} again and the loser may win.
- * The partial unique index {@code uq_allocations_runner_active} independently rejects a second
- * {@code ACTIVE} allocation for one runner, so a scheduler-selection mistake surfaces as a
- * constraint violation (rolling back the whole claim) rather than a silent double allocation.
- *
- * <p>No process-local mutexes, Redis, Kafka, etcd, or other coordination are used. No threads or
- * pools are created here: callers and the configured HikariCP pool (finite, see {@code
- * application.yml}) bound concurrency. Compatibility is exact {@code runnerClass} equality only;
- * generalized labels, priorities, bin-packing, affinity, and autoscaling are out of scope.
- *
- * <p>The returned {@link Claim} is constructed inside the transaction but handed to the caller
- * only when the transaction commits (Spring commits on method return), so downstream delivery
- * code never observes a claim as authoritative before PostgreSQL has committed it.
+ * <p>The partial unique index independently rejects double allocation of a runner and rolls back
+ * the whole claim (including epoch and attempt). The job row lock also prevents concurrent claims
+ * of the same job on different runners. No process-local coordination or new pools are used.
+ * A claim is returned through the transaction proxy only after commit.
  */
 @Service
 public class SchedulerService {
 
   // Inspectable critical-path SQL. No ORM hides this boundary.
-  static final String SELECT_JOB_CLASS_SQL = "SELECT runner_class FROM jobs WHERE job_id = ?";
+  static final String LOCK_RUNNER_SQL = "SELECT runner_id FROM runners WHERE runner_id = ? FOR UPDATE";
+  static final String SELECT_JOB_SQL =
+      "SELECT runner_class, result, cancel_requested FROM jobs WHERE job_id = ? FOR UPDATE";
 
   static final String CLAIM_RUNNER_SQL =
       "UPDATE runners SET state = 'ASSIGNED', epoch = epoch + 1, updated_at = now() "
@@ -69,32 +41,46 @@ public class SchedulerService {
   static final String INSERT_ATTEMPT_SQL = "INSERT INTO attempts (attempt_id, job_id) VALUES (?, ?)";
 
   static final String INSERT_ALLOCATION_SQL =
-      "INSERT INTO allocations (allocation_id, attempt_id, job_id, runner_id, runner_epoch) "
-          + "VALUES (?, ?, ?, ?, ?) "
+      "INSERT INTO allocations (allocation_id, attempt_id, job_id, runner_id, runner_epoch, workload_timeout_ms) "
+          + "VALUES (?, ?, ?, ?, ?, ?) "
           + "RETURNING allocation_id, attempt_id, job_id, runner_id, runner_epoch, created_at";
 
   private final JdbcTemplate jdbc;
+  private final long workloadTimeoutMs;
 
-  public SchedulerService(JdbcTemplate jdbc) {
+  public SchedulerService(JdbcTemplate jdbc,
+      @Value("${clearance.workload-timeout-ms:3600000}") long workloadTimeoutMs) {
+    if (workloadTimeoutMs < 1) throw new IllegalArgumentException("workload timeout must be positive");
     this.jdbc = jdbc;
+    this.workloadTimeoutMs = Math.min(workloadTimeoutMs, 86_400_000);
   }
+
+  private record QueuedJob(String runnerClass, String result, boolean cancelRequested) {}
 
   /**
    * Atomically claims {@code runnerId} for {@code jobId} when the runner is authoritatively {@code
    * AVAILABLE} and its {@code runnerClass} exactly equals the job's {@code runnerClass}.
    *
    * @return the committed claim, or empty when no allocation was obtained (runner missing,
-   *     incompatible, or not {@code AVAILABLE}); absence of an active-allocation row alone never
+   *     incompatible, or not {@code AVAILABLE}; job terminal, cancelled, or already active);
+   *     absence of an active-allocation row alone never
    *     counts as schedulable
    * @throws JobNotFoundException when {@code jobId} is unknown
    */
   @Transactional(isolation = Isolation.READ_COMMITTED)
   public Optional<Claim> claim(UUID jobId, UUID runnerId) {
-    List<String> classes = jdbc.queryForList(SELECT_JOB_CLASS_SQL, String.class, jobId);
-    if (classes.isEmpty()) {
-      throw new JobNotFoundException();
-    }
-    String runnerClass = classes.get(0);
+    // Runner is always locked first, including when a claim will be refused.
+    List<UUID> runners = jdbc.queryForList(LOCK_RUNNER_SQL, UUID.class, runnerId);
+    List<QueuedJob> jobs = jdbc.query(SELECT_JOB_SQL,
+        (rs, n) -> new QueuedJob(rs.getString("runner_class"), rs.getString("result"),
+            rs.getBoolean("cancel_requested")), jobId);
+    if (jobs.isEmpty()) throw new JobNotFoundException();
+    QueuedJob job = jobs.getFirst();
+    if (runners.isEmpty() || job.result() != null || job.cancelRequested()
+        || Boolean.TRUE.equals(jdbc.queryForObject("""
+            SELECT EXISTS (SELECT 1 FROM allocations WHERE job_id = ? AND state = 'ACTIVE')
+            """, Boolean.class, jobId))) return Optional.empty();
+    String runnerClass = job.runnerClass();
 
     UUID attemptId = UUID.randomUUID();
     UUID allocationId = UUID.randomUUID();
@@ -121,7 +107,8 @@ public class SchedulerService {
             attemptId,
             jobId,
             runnerId,
-            newEpoch);
+            newEpoch,
+            workloadTimeoutMs);
     return Optional.of(allocations.get(0));
   }
 
